tests/parser/errors/if_no_lbrace.gbl
fn f() {
	if x var a = 1;
}
